Refactoring code to support Java 17